nldl_derive/tests/ui/serializable/nla-type-unknown-multiple-fails.rs
use nldl::attr::UnknownAttribute;
use nldl_derive::NetlinkAttributeSerializable;

#[derive(Debug, PartialEq, NetlinkAttributeSerializable)]
enum TestEnum {
    #[nla_type(_)]
    Unknown(UnknownAttribute),
    #[nla_type(_)]
    Unknown2(UnknownAttribute)
}

fn main() {}
